--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ntpsec (1.2.1+dfsg1-8pexip1) pexip; urgency=medium
+
+  * Prepare Pexip packaging
+
+ -- John-Mark Bell <jmb@pexip.com>  Mon, 14 Nov 2022 16:18:33 +0000
+
 ntpsec (1.2.1+dfsg1-8) unstable; urgency=medium
 
   * Fix ntpdate-debian error on ntp.conf (Closes: 1020865)
