--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ntpsec (1.2.1+dfsg1-8pexip3) pexip-bullseye-openssl3; urgency=medium
+
+  * Use Pexip server CNAMEs
+  * Disable DHCP integration
+
+ -- John-Mark Bell <jmb@pexip.com>  Mon, 12 Dec 2022 22:17:30 +0000
+
 ntpsec (1.2.1+dfsg1-8pexip2) pexip-bullseye-openssl3; urgency=medium
 
   * No-change rebuild
