--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ntpsec (1.2.1+dfsg1-8pexip5) pexip-bullseye-openssl3; urgency=medium
+
+  * Disable ntpsec-systemd-netif integration
+
+ -- John-Mark Bell <jmb@pexip.com>  Wed, 14 Dec 2022 11:36:33 +0000
+
 ntpsec (1.2.1+dfsg1-8pexip4) pexip-bullseye-openssl3; urgency=medium
 
   * Use dedicated libctx for MD5
