--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ntpsec (1.2.2+dfsg1-1pexip1) pexip; urgency=medium
+
+  * New upstream release
+
+ -- Huw Jones <huw@pexip.com>  Thu, 16 Mar 2023 13:32:52 +0000
+
 ntpsec (1.2.2+dfsg1-1) unstable; urgency=medium
 
   * New upstream version
