--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ntpsec (1.2.2+dfsg1-1+deb12u1pexip2) pexip-bookworm; urgency=medium
+
+  * Initial bookworm build
+
+ -- Mark Hymers <mark.hymers@pexip.com>  Thu, 16 Nov 2023 10:13:31 +0000
+
 ntpsec (1.2.2+dfsg1-1+deb12u1pexip1) pexip; urgency=high
 
   * New upstream release
