--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ntpsec (1.2.2+dfsg1-1+deb12u1pexip3) pexip-bookworm; urgency=medium
+
+  * Bookworm build for product distribution
+
+ -- Mark Hymers <mark.hymers@pexip.com>  Sat, 09 Dec 2023 22:56:42 +0000
+
 ntpsec (1.2.2+dfsg1-1+deb12u1pexip2) pexip-bookworm; urgency=medium
 
   * Initial bookworm build
