--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ntpsec (1.2.2+dfsg1-1+deb12u1+pexip24u4) pexip-bookworm; urgency=medium
+
+  * New versioning scheme
+
+ -- Mark Hymers <mark.hymers@pexip.com>  Thu, 01 Feb 2024 16:13:53 +0000
+
 ntpsec (1.2.2+dfsg1-1+deb12u1pexip3) pexip-bookworm; urgency=medium
 
   * Bookworm build for product distribution
